[package]
name = "asaas"
description = "An SDK for interacting with the Asaas API."
version = "0.1.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/wuzi/asaas"
readme = "README.md"
keywords = ["sdk", "payments", "asaas"]
categories = ["network-programming"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
